--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Alexander A. Klimov <alexander.klimov@netways.de>
 Alexander Fuhr <alexander.fuhr@netways.de>
 Alexander Schomburg <script.acc@alex.schomb.org>
 Alexander Wirt <formorer@debian.org>
+Andres Ivanov <andres@andres.wtf>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
 Arnd Hannemann <arnd@arndnet.de>
 Bastian Guse <bguse@nocopy.de>
