--- a/AUTHORS
+++ b/AUTHORS
@@ -84,6 +84,7 @@ Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
 Valentin Hoebel <valentin@xenuser.org>
+Vytenis Darulis <vytenis@uber.com>
 Wolfgang Nieder <wnd@gmx.net>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
