--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
 Blerim Sheqa <blerim.sheqa@netways.de>
+Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
 Carlos Cesario <carloscesario@gmail.com>
