--- a/AUTHORS
+++ b/AUTHORS
@@ -44,6 +44,7 @@ Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
 Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
+Julian Brost <julian@0x4a42.net>
 Jérôme Drouet <jerome.drouet@gmail.com>
 Lars Engels <lars.engels@0x20.net>
 Lee Clemens <java@leeclemens.net>
