--- a/AUTHORS
+++ b/AUTHORS
@@ -71,6 +71,7 @@ Phil Hutchinson <phil@volumedia.co.uk>
 Ralph Breier <ralph.breier@roedl.com>
 Reto Zeder <reto.zeder@arcade.ch>
 Ricardo Bartels <ricardo@bitchbrothers.com>
+Rune Darrud <theflyingcorpse@gmail.com>
 Sam Kottler <shk@linux.com>
 Sebastian Brückner <mail@invlid.com>
 Sebastian Chrostek <sebastian@chrostek.net>
