--- a/AUTHORS
+++ b/AUTHORS
@@ -54,7 +54,7 @@ Luca Lesinigo <luca@lm-net.it>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@torch.sh>
-Markus Frosch <markus@lazyfrosch.de>
+Markus Frosch <lazyfrosch@icinga.org>
 Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
 Mathieu Lutfy <mathieu@bidon.ca>
