--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Alexander Wirt <formorer@debian.org>
 Andres Ivanov <andres@andres.wtf>
 Andrew Meyer <ameyer+secure@nodnetwork.org>
 Arnd Hannemann <arnd@arndnet.de>
+Assaf Flatto <assaf.flatto@livepopuli.com>
 Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
