--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,7 @@ Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
 Gunnar Beutner <gunnar.beutner@netways.de>
 Hannes Van de Vel <h@nnes.be>
+Heike Jurzik <icinga@huhnix.org>
 Hendrik Röder <hendrik.biz@gmail.com>
 Ian Kelling <ian@iankelling.org>
 Ildar Hizbulin <hizel@vyborg.ru>
