--- a/AUTHORS
+++ b/AUTHORS
@@ -55,7 +55,7 @@ Louis Sautier <sautier.louis@gmail.com>
 Luca Lesinigo <luca@lm-net.it>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
 Marcus van Dam <marcus@marcusvandam.nl>
-Marius Sturm <marius@torch.sh>
+Marius Sturm <marius@graylog.com>
 Markus Frosch <lazyfrosch@icinga.org>
 Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
