--- a/AUTHORS
+++ b/AUTHORS
@@ -65,6 +65,7 @@ Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
 Michael Kraus <michael.kraus@consol.de>
+Nicolas Limage <github@xephon.org>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Per von Zweigbergk <pvz@itassistans.se>
