--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,18 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.4.6
+
+#### Feature
+
+* Feature 11638: Update RELEASE.md
+
+#### Bugfixes
+
+* Bug 11628: Docs: Zone attribute 'endpoints' is an array
+* Bug 11634: Icinga 2 fails to build on Ubuntu Xenial
+* Bug 11635: Failed assertion in IdoPgsqlConnection::FieldToEscapedString
+
 ### What's New in Version 2.4.5
 
 #### Changes
