--- a/AUTHORS
+++ b/AUTHORS
@@ -39,7 +39,7 @@ Ildar Hizbulin <hizel@vyborg.ru>
 James Pharaoh <james@pharaoh.uk>
 Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
-Jason Young <jyoung15@gmail.com>
+Jason Young <jason.young@velaspan.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
