--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,51 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.4.8
+
+#### Changes
+
+* Bugfixes
+* Support for limiting the maximum number of concurrent checks (new configuration option) 
+* HA-aware features now wait for connected cluster nodes in the same zone (e.g. DB IDO)
+* The 'icinga' check now alerts on failed reloads
+
+#### Feature
+
+* Feature 8137 (Checker): Maximum concurrent service checks
+* Feature 9236 (Perfdata): PerfdataWriter: Better failure handling for file renames across file systems
+* Feature 9997 (libmethods): "icinga" check should have state WARNING when the last reload failed
+* Feature 10581 (ITL): Provide icingacli in the ITL
+* Feature 11556 (libbase): Add support for subjectAltName in SSL certificates
+* Feature 11651 (CLI): Implement SNI support for the CLI commands
+* Feature 11720 (ITL): 'disk' CheckCommand: Exclude 'cgroup' and 'tracefs' by default
+* Feature 11748 (Cluster): Remove unused cluster commands
+* Feature 11765 (Cluster): Only activate HARunOnce objects once there's a cluster connection
+* Feature 11768 (Documentation): Add the category to the generated changelog
+
+#### Bugfixes
+
+* Bug 9989 (Configuration): Service apply without name possible
+* Bug 10426 (libicinga): Icinga crashes with a segfault on receiving a lot of check results for nonexisting hosts/services
+* Bug 10717 (Configuration): Comments and downtimes of deleted checkable objects are not deleted
+* Bug 11046 (Cluster): Icinga2 agent gets stuck after disconnect and won't relay messages
+* Bug 11112 (Compat): Empty author/text attribute for comment/downtimes external commands causing crash
+* Bug 11147 (libicinga): "day -X" time specifications are parsed incorrectly
+* Bug 11158 (libicinga): Crash with empty ScheduledDowntime 'ranges' attribute
+* Bug 11374 (API): Icinga2 API: deleting service with cascade=1 does not delete dependant notification
+* Bug 11390 (Compat): Command pipe overloaded: Can't send external Icinga command to the local command file
+* Bug 11396 (API): inconsistent API /v1/objects/* response for PUT requests
+* Bug 11589 (libicinga): notification sent out during flexible downtime
+* Bug 11645 (Documentation): Incorrect chapter headings for Object#to_string and Object#type
+* Bug 11646 (Configuration): Wrong log severity causes segfault
+* Bug 11686 (API): Icinga Crash with the workflow Create_Host-> Downtime for the Host ->  Delete Downtime -> Remove Host
+* Bug 11711 (libicinga): Expired downtimes are not removed
+* Bug 11714 (libbase): Crash in UnameHelper
+* Bug 11742 (Documentation): Missing documentation for event commands w/ execution bridge
+* Bug 11757 (API): API: Missing error handling for invalid JSON request body
+* Bug 11767 (DB IDO): Ensure that program status updates are immediately updated in DB IDO
+* Bug 11779 (API): Incorrect variable names for joined fields in filters
+
 ### What's New in Version 2.4.7
 
 #### Bugfixes
