--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,18 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.4.9
+
+#### Changes
+
+This release fixes a number of issues introduced in 2.4.8.
+
+#### Bugfixes
+
+* Bug 11801 (Perfdata): Error: Function call 'rename' for file '/var/spool/icinga2/tmp/service-perfdata' failed with error code 2, 'No such file or directory'
+* Bug 11804 (Configuration): Segfault when trying to start 2.4.8
+* Bug 11807 (Compat): Command Pipe thread 100% CPU Usage
+
 ### What's New in Version 2.4.8
 
 #### Changes
