--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,12 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.4.10
+
+#### Bugfixes
+
+* Bug 11812 (Checker): Checker component doesn't execute any checks for command_endpoint
+
 ### What's New in Version 2.4.9
 
 #### Changes
