--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Dolf Schimmel <dolf@transip.nl>
 Eduard Güldner <eduard.gueldner@gmail.com>
 Edvin Seferovic <edvin@seferovic.net>
 Eric Lippmann <eric.lippmann@netways.de>
+Evgeni Golov <evgeni@golov.de>
 Ferdi Gueran <ferdi.gueran@nextevolution.de>
 Gaël Beaudoin <gaboo@gaboo.org>
 Gerd von Egidy <gerd@egidy.de>
