--- a/AUTHORS
+++ b/AUTHORS
@@ -42,6 +42,7 @@ Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jason.young@velaspan.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
+Jens Schanz <mail@jensschanz.de>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
