--- a/AUTHORS
+++ b/AUTHORS
@@ -43,6 +43,7 @@ Jan Wagner <waja@cyconet.org>
 Jason Young <jason.young@velaspan.com>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
 Jens Schanz <mail@jensschanz.de>
+Jeremy Armstrong <lepubel@gmail.com>
 Jesse Morgan <morgajel@gmail.com>
 Jo Goossens <jo.goossens@hosted-power.com>
 Johannes Meyer <johannes.meyer@netways.de>
