--- a/AUTHORS
+++ b/AUTHORS
@@ -94,6 +94,7 @@ Tim Hardeck <thardeck@suse.de>
 Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
+Uwe Ebel <kobmaki@aol.com>
 Valentin Hoebel <valentin@xenuser.org>
 Vytenis Darulis <vytenis@uber.com>
 Wolfgang Nieder <wnd@gmx.net>
