--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ Lennart Betz <lennart.betz@netways.de>
 Louis Sautier <sautier.louis@gmail.com>
 Luca Lesinigo <luca@lm-net.it>
 Malte Rabenseifner <mail@malte-rabenseifner.de>
+Manuel Reiter <reiter@csc.uni-frankfurt.de>
 Marcus van Dam <marcus@marcusvandam.nl>
 Marius Sturm <marius@graylog.com>
 Markus Frosch <lazyfrosch@icinga.org>
