--- a/AUTHORS
+++ b/AUTHORS
@@ -88,6 +88,7 @@ Simon Ruderich <simon@ruderich.org>
 Siyalrach Anton Thomas <sat@level8.dk>
 Stefan Triep <stefan@triep.net>
 Stephan Platz <github@paalsteek.de>
+Stephan Tesch <stephan@tesch.cx>
 Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
 Thomas Widhalm <thomas.widhalm@netways.de>
