--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
 Claudio Kuenzler <ck@claudiokuenzler.com>
+Conrad Clement <cclement@printeron.com>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
