Add "check_mysql_query" CheckCommand definition
fixes #12314

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
 Carlos Cesario <carloscesario@gmail.com>
+Christian Birk <mail@birkc.de>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
