--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Assaf Flatto <assaf@aikilinux.com>
 Bastian Guse <bguse@nocopy.de>
 Benedikt Heine <bebe@bebehei.de>
 Bernd Erk <bernd.erk@icinga.org>
+Berthold Cogel <cogel@uni-koeln.de>
 Blerim Sheqa <blerim.sheqa@netways.de>
 Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
@@ -71,6 +72,7 @@ Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
 Michael Kraus <michael.kraus@consol.de>
+Mirko Nardin <mirko.nardin@gmx.net>
 Nicolas Limage <github@xephon.org>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
