--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ Blerim Sheqa <blerim.sheqa@netways.de>
 Brian De Wolf <git@bldewolf.com>
 Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
+Bård Dahlmo-Lerbæk <bard.dahlmo-lerbaek@skatteetaten.no>
 Carlos Cesario <carloscesario@gmail.com>
 Christian Birk <mail@birkc.de>
 Christian Harke <ch.harke@gmail.com>
