--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@ Brian Dockter <specus@gmail.com>
 Bruno Lingner <mail@hugo.ro>
 Bård Dahlmo-Lerbæk <bard.dahlmo-lerbaek@skatteetaten.no>
 Carlos Cesario <carloscesario@gmail.com>
+Carsten Köbke <carsten.koebke@gmx.de>
 Christian Birk <mail@birkc.de>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
