--- a/AUTHORS
+++ b/AUTHORS
@@ -99,6 +99,7 @@ Steve McMaster <mcmaster@hurricanelabs.com>
 Thomas Gelf <thomas@gelf.net>
 Thomas Widhalm <thomas.widhalm@netways.de>
 Tim Hardeck <thardeck@suse.de>
+Timo Buhrmester <van.fstd@gmail.com>
 Tobias Birnbaum <osterd@gmx.de>
 Tobias von der Krone <tobias.vonderkrone@profitbricks.com>
 Tom Geissler <Tom@d7031.de>
