--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,7 @@ James Pharaoh <james@pharaoh.uk>
 Jan Andres <jan.andres@berenberg.de>
 Jan Wagner <waja@cyconet.org>
 Jason Young <jason.young@velaspan.com>
+Jean-Louis Dupond <jean-louis@dupond.be>
 Jean-Marcel Flach <jean-marcel.flach@netways.de>
 Jens Schanz <mail@jensschanz.de>
 Jeremy Armstrong <lepubel@gmail.com>
@@ -107,6 +108,7 @@ Uwe Ebel <kobmaki@aol.com>
 Valentin Hoebel <valentin@xenuser.org>
 Vytenis Darulis <vytenis@uber.com>
 Wolfgang Nieder <wnd@gmx.net>
+Yannick Charton <tontonitch-pro@yahoo.fr>
 Yohan Jarosz <yohanjarosz@yahoo.fr>
 Zoltan Nagy <abesto@abesto.net>
 Élie Bouttier <elie@bouttier.eu>
