--- a/AUTHORS
+++ b/AUTHORS
@@ -75,6 +75,7 @@ Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
 Michael Kraus <michael.kraus@consol.de>
+Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
 Nicolas Limage <github@xephon.org>
 Pall Sigurdsson <palli-github@minor.is>
