--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,16 @@ Please check [doc/1-about.md].
 
 ## What's New
 
+### What's New in Version 2.5.3
+
+#### Changes
+
+This release addresses an issue with PostgreSQL support for the IDO database module.
+
+#### Bugfixes
+
+* Bug 12533 (DB IDO): ido pgsql migration from 2.4.0 to 2.5.0 : wrong size for config_hash
+
 ### What's New in Version 2.5.2
 
 #### Bugfixes
