--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
 Claudio Kuenzler <ck@claudiokuenzler.com>
 Conrad Clement <cclement@printeron.com>
+Daniel Helgenberger <daniel.helgenberger@m-box.de>
 Daniil Yaroslavtsev <dyaroslavtsev@confyrm.com>
 David Beck <techiscool@gmail.com>
 Dinesh Majrekar <dinesh.majrekar@serverchoice.com>
