--- a/AUTHORS
+++ b/AUTHORS
@@ -59,6 +59,7 @@ Joseph L. Casale <jcasale@activenetwerx.com>
 Julian Brost <julian@0x4a42.net>
 Jérôme Drouet <jerome.drouet@gmail.com>
 Lars Engels <lars.engels@0x20.net>
+Lars Krüger <krueger-lars@web.de>
 Lee Clemens <java@leeclemens.net>
 Lennart Betz <lennart.betz@netways.de>
 Louis Sautier <sautier.louis@gmail.com>
