--- a/AUTHORS
+++ b/AUTHORS
@@ -58,6 +58,7 @@ Jonas Meurer <jonas@freesources.org>
 Joseph L. Casale <jcasale@activenetwerx.com>
 Julian Brost <julian@0x4a42.net>
 Jérôme Drouet <jerome.drouet@gmail.com>
+Konstantin Kelemen <konstantin@kel.mn>
 Lars Engels <lars.engels@0x20.net>
 Lars Krüger <krueger-lars@web.de>
 Lee Clemens <java@leeclemens.net>
@@ -73,6 +74,7 @@ Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
 Mathieu Lutfy <mathieu@bidon.ca>
 Matthaus Owens <matthaus@puppetlabs.com>
+Matthias Schales <black-dragon131@web.de>
 Max Zhang <zhenzhan@tibco.com>
 Mhd Sulhan <ms@kilabit.info>
 Michael Friedrich <michael.friedrich@netways.de>
