--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Christian Birk <mail@birkc.de>
 Christian Harke <ch.harke@gmail.com>
 Christian Jonak <christian@jonak.org>
 Christian Lehmann <christian_lehmann@gmx.de>
+Claudio Bilotta <bilottalove@gmail.com>
 Claudio Kuenzler <ck@claudiokuenzler.com>
 Conrad Clement <cclement@printeron.com>
 Daniel Helgenberger <daniel.helgenberger@m-box.de>
