--- a/AUTHORS
+++ b/AUTHORS
@@ -73,6 +73,7 @@ Marius Sturm <marius@graylog.com>
 Markus Frosch <lazyfrosch@icinga.org>
 Markus Waldmüller <markus.waldmueller@netways.de>
 Martin Stiborsky <martin.stiborsky@gmail.com>
+Mathieu Arnold <mat@mat.cc>
 Mathieu Lutfy <mathieu@bidon.ca>
 Matthaus Owens <matthaus@puppetlabs.com>
 Matthias Schales <black-dragon131@web.de>
