--- a/AUTHORS
+++ b/AUTHORS
@@ -84,6 +84,7 @@ Michael Kraus <michael.kraus@consol.de>
 Mirco Bauer <meebey@meebey.net>
 Mirko Nardin <mirko.nardin@gmx.net>
 Nicolas Limage <github@xephon.org>
+Nicole Lang <nicole.lang@netways.de>
 Pall Sigurdsson <palli-github@minor.is>
 Paul Richards <paul@minimoo.org>
 Per von Zweigbergk <pvz@itassistans.se>
